@@ -22,13 +22,15 @@ import io.airbyte.cdk.integrations.base.JavaBaseConstants;
 import io.airbyte.commons.io.IOs;
 import io.airbyte.commons.json.Jsons;
 import io.airbyte.integrations.base.destination.typing_deduping.BaseSqlGeneratorIntegrationTest;
-import io.airbyte.integrations.base.destination.typing_deduping.DestinationInitialState;
+import io.airbyte.integrations.base.destination.typing_deduping.DestinationInitialStatus;
 import io.airbyte.integrations.base.destination.typing_deduping.Sql;
 import io.airbyte.integrations.base.destination.typing_deduping.StreamId;
+import io.airbyte.integrations.base.destination.typing_deduping.TypeAndDedupeTransaction;
 import io.airbyte.integrations.destination.snowflake.OssCloudEnvVarConsts;
 import io.airbyte.integrations.destination.snowflake.SnowflakeDatabase;
 import io.airbyte.integrations.destination.snowflake.SnowflakeTestSourceOperations;
 import io.airbyte.integrations.destination.snowflake.SnowflakeTestUtils;
+import io.airbyte.integrations.destination.snowflake.typing_deduping.migrations.SnowflakeState;
 import java.nio.file.Path;
 import java.sql.SQLException;
 import java.util.Arrays;
@@ -43,9 +45,10 @@ import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.text.StringSubstitutor;
 import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 
-public class SnowflakeSqlGeneratorIntegrationTest extends BaseSqlGeneratorIntegrationTest {
+public class SnowflakeSqlGeneratorIntegrationTest extends BaseSqlGeneratorIntegrationTest<SnowflakeState> {
 
   private static String databaseName;
   private static JdbcDatabase database;
@@ -71,7 +74,7 @@ public class SnowflakeSqlGeneratorIntegrationTest extends BaseSqlGeneratorIntegr
 
   @Override
   protected SnowflakeDestinationHandler getDestinationHandler() {
-    return new SnowflakeDestinationHandler(databaseName, database);
+    return new SnowflakeDestinationHandler(databaseName, database, namespace.toUpperCase());
   }
 
   @Override
@@ -387,6 +390,13 @@ public class SnowflakeSqlGeneratorIntegrationTest extends BaseSqlGeneratorIntegr
     });
   }
 
+  @Disabled("We removed the optimization to only set the loaded_at column for new records after certain _extracted_at")
+  @Test
+  @Override
+  public void ignoreOldRawRecords() throws Exception {
+    super.ignoreOldRawRecords();
+  }
+
   /**
    * Verify that the final table does not include NON-NULL PKs (after
    * https://github.com/airbytehq/airbyte/pull/31082)
@@ -412,9 +422,9 @@ public class SnowflakeSqlGeneratorIntegrationTest extends BaseSqlGeneratorIntegr
 
     // should be OK with new tables
     destinationHandler.execute(createTable);
-    List<DestinationInitialState> initialStates = destinationHandler.gatherInitialState(List.of(incrementalDedupStream));
+    List<DestinationInitialStatus<SnowflakeState>> initialStates = destinationHandler.gatherInitialState(List.of(incrementalDedupStream));
     assertEquals(1, initialStates.size());
-    assertFalse(initialStates.get(0).isSchemaMismatch());
+    assertFalse(initialStates.getFirst().isSchemaMismatch());
     destinationHandler.execute(Sql.of("DROP TABLE " + streamId.finalTableId("")));
 
     // Hack the create query to add NOT NULLs to emulate the old behavior
@@ -429,6 +439,891 @@ public class SnowflakeSqlGeneratorIntegrationTest extends BaseSqlGeneratorIntegr
     initialStates = destinationHandler.gatherInitialState(List.of(incrementalDedupStream));
     assertEquals(1, initialStates.size());
     assertTrue(initialStates.get(0).isSchemaMismatch());
+  }
+
+  @Test
+  public void dst_test_oldSyncRunsThroughTransition_thenNewSyncRuns_dedup() throws Exception {
+    this.createRawTable(this.streamId);
+    this.createFinalTable(this.incrementalDedupStream, "");
+    this.insertRawTableRecords(this.streamId, List.of(
+        // 2 records written by a sync running on the old version of snowflake
+        Jsons.deserialize("""
+                          {
+                            "_airbyte_raw_id": "pre-dst local tz 1",
+                            "_airbyte_extracted_at": "2024-03-10T02:00:00-08:00",
+                            "_airbyte_data": {
+                              "id1": 1,
+                              "id2": 100,
+                              "string": "Alice00"
+                            }
+                          }
+                          """),
+        Jsons.deserialize("""
+                          {
+                            "_airbyte_raw_id": "post-dst local tz 2",
+                            "_airbyte_extracted_at": "2024-03-10T02:01:00-07:00",
+                            "_airbyte_data": {
+                              "id1": 2,
+                              "id2": 100,
+                              "string": "Bob00"
+                            }
+                          }
+                          """),
+        // and 2 records that got successfully loaded.
+        Jsons.deserialize("""
+                          {
+                            "_airbyte_raw_id": "pre-dst local tz 3",
+                            "_airbyte_extracted_at": "2024-03-10T02:00:00-08:00",
+                            "_airbyte_loaded_at": "1970-01-01T00:00:00Z",
+                            "_airbyte_data": {
+                              "id1": 3,
+                              "id2": 100,
+                              "string": "Charlie00"
+                            }
+                          }
+                          """),
+        Jsons.deserialize("""
+                          {
+                            "_airbyte_raw_id": "post-dst local tz 4",
+                            "_airbyte_extracted_at": "2024-03-10T02:01:00-07:00",
+                            "_airbyte_loaded_at": "1970-01-01T00:00:00Z",
+                            "_airbyte_data": {
+                              "id1": 4,
+                              "id2": 100,
+                              "string": "Dave00"
+                            }
+                          }
+                          """)));
+    this.insertFinalTableRecords(false, this.streamId, "", List.of(
+        Jsons.deserialize("""
+                          {
+                            "_airbyte_raw_id": "pre-dst local tz 3",
+                            "_airbyte_extracted_at": "2024-03-10T02:00:00-08:00",
+                            "_airbyte_meta": {"errors": []},
+                            "id1": 3,
+                            "id2": 100,
+                            "string": "Charlie00"
+                          }
+                          """),
+        Jsons.deserialize("""
+                          {
+                            "_airbyte_raw_id": "post-dst local tz 4",
+                            "_airbyte_extracted_at": "2024-03-10T02:01:00-07:00",
+                            "_airbyte_meta": {"errors": []},
+                            "id1": 4,
+                            "id2": 100,
+                            "string": "Dave00"
+                          }
+                          """)));
+    // Gather initial state at the start of our updated sync
+    DestinationInitialStatus<SnowflakeState> initialState =
+        this.destinationHandler.gatherInitialState(List.of(this.incrementalDedupStream)).getFirst();
+    this.insertRawTableRecords(this.streamId, List.of(
+        // insert raw records with updates
+        Jsons.deserialize("""
+                          {
+                            "_airbyte_raw_id": "post-dst utc 1",
+                            "_airbyte_extracted_at": "2024-03-10T02:02:00Z",
+                            "_airbyte_data": {
+                              "id1": 1,
+                              "id2": 100,
+                              "string": "Alice01"
+                            }
+                          }
+                          """),
+        Jsons.deserialize("""
+                          {
+                            "_airbyte_raw_id": "post-dst utc 2",
+                            "_airbyte_extracted_at": "2024-03-10T02:02:00Z",
+                            "_airbyte_data": {
+                              "id1": 2,
+                              "id2": 100,
+                              "string": "Bob01"
+                            }
+                          }
+                          """),
+        Jsons.deserialize("""
+                          {
+                            "_airbyte_raw_id": "post-dst utc 3",
+                            "_airbyte_extracted_at": "2024-03-10T02:02:00Z",
+                            "_airbyte_data": {
+                              "id1": 3,
+                              "id2": 100,
+                              "string": "Charlie01"
+                            }
+                          }
+                          """),
+        Jsons.deserialize("""
+                          {
+                            "_airbyte_raw_id": "post-dst utc 4",
+                            "_airbyte_extracted_at": "2024-03-10T02:02:00Z",
+                            "_airbyte_data": {
+                              "id1": 4,
+                              "id2": 100,
+                              "string": "Dave01"
+                            }
+                          }
+                          """)));
+
+    TypeAndDedupeTransaction.executeTypeAndDedupe(this.generator, this.destinationHandler, this.incrementalDedupStream,
+        initialState.initialRawTableStatus().maxProcessedTimestamp(), "");
+
+    DIFFER.diffFinalTableRecords(
+        List.of(
+            Jsons.deserialize("""
+                              {
+                                "_AIRBYTE_RAW_ID": "post-dst utc 1",
+                                "_AIRBYTE_EXTRACTED_AT": "2024-03-10T02:02:00.000000000Z",
+                                "_AIRBYTE_META": {"errors": []},
+                                "ID1": 1,
+                                "ID2": 100,
+                                "STRING": "Alice01"
+                              }
+                              """),
+            Jsons.deserialize("""
+                              {
+                                "_AIRBYTE_RAW_ID": "post-dst utc 2",
+                                "_AIRBYTE_EXTRACTED_AT": "2024-03-10T02:02:00.000000000Z",
+                                "_AIRBYTE_META": {"errors": []},
+                                "ID1": 2,
+                                "ID2": 100,
+                                "STRING": "Bob01"
+                              }
+                              """),
+            Jsons.deserialize("""
+                              {
+                                "_AIRBYTE_RAW_ID": "post-dst utc 3",
+                                "_AIRBYTE_EXTRACTED_AT": "2024-03-10T02:02:00.000000000Z",
+                                "_AIRBYTE_META": {"errors": []},
+                                "ID1": 3,
+                                "ID2": 100,
+                                "STRING": "Charlie01"
+                              }
+                              """),
+            Jsons.deserialize("""
+                              {
+                                "_AIRBYTE_RAW_ID": "post-dst utc 4",
+                                "_AIRBYTE_EXTRACTED_AT": "2024-03-10T02:02:00.000000000Z",
+                                "_AIRBYTE_META": {"errors": []},
+                                "ID1": 4,
+                                "ID2": 100,
+                                "STRING": "Dave01"
+                              }
+                              """)),
+        this.dumpFinalTableRecords(this.streamId, ""));
+  }
+
+  @Test
+  public void dst_test_oldSyncRunsBeforeTransition_thenNewSyncRunsThroughTransition_dedup() throws Exception {
+    this.createRawTable(this.streamId);
+    this.createFinalTable(this.incrementalDedupStream, "");
+    this.insertRawTableRecords(this.streamId, List.of(
+        // record written by a sync running on the old version of snowflake
+        Jsons.deserialize("""
+                          {
+                            "_airbyte_raw_id": "pre-dst local tz 1",
+                            "_airbyte_extracted_at": "2024-03-10T01:59:00-08:00",
+                            "_airbyte_data": {
+                              "id1": 1,
+                              "id2": 100,
+                              "string": "Alice00"
+                            }
+                          }
+                          """)));
+    // Gather initial state at the start of our updated sync
+    DestinationInitialStatus<SnowflakeState> initialState =
+        this.destinationHandler.gatherInitialState(List.of(this.incrementalDedupStream)).getFirst();
+    this.insertRawTableRecords(this.streamId, List.of(
+        // update the record twice
+        // this never really happens, but verify that it works
+        Jsons.deserialize("""
+                          {
+                            "_airbyte_raw_id": "pre-dst utc 1",
+                            "_airbyte_extracted_at": "2024-03-10T02:00:00Z",
+                            "_airbyte_data": {
+                              "id1": 1,
+                              "id2": 100,
+                              "string": "Alice01"
+                            }
+                          }
+                          """),
+        Jsons.deserialize("""
+                          {
+                            "_airbyte_raw_id": "post-dst utc 1",
+                            "_airbyte_extracted_at": "2024-03-10T02:01:00Z",
+                            "_airbyte_data": {
+                              "id1": 1,
+                              "id2": 100,
+                              "string": "Alice02"
+                            }
+                          }
+                          """)));
+
+    TypeAndDedupeTransaction.executeTypeAndDedupe(this.generator, this.destinationHandler, this.incrementalDedupStream,
+        initialState.initialRawTableStatus().maxProcessedTimestamp(), "");
+
+    DIFFER.diffFinalTableRecords(
+        List.of(
+            Jsons.deserialize("""
+                              {
+                                "_AIRBYTE_RAW_ID": "post-dst utc 1",
+                                "_AIRBYTE_EXTRACTED_AT": "2024-03-10T02:01:00.000000000Z",
+                                "_AIRBYTE_META": {"errors": []},
+                                "ID1": 1,
+                                "ID2": 100,
+                                "STRING": "Alice02"
+                              }
+                              """)),
+        this.dumpFinalTableRecords(this.streamId, ""));
+  }
+
+  @Test
+  public void dst_test_oldSyncRunsBeforeTransition_thenNewSyncRunsBeforeTransition_thenNewSyncRunsThroughTransition_dedup() throws Exception {
+    this.createRawTable(this.streamId);
+    this.createFinalTable(this.incrementalDedupStream, "");
+    this.insertRawTableRecords(this.streamId, List.of(
+        // records written by a sync running on the old version of snowflake
+        Jsons.deserialize("""
+                          {
+                            "_airbyte_raw_id": "pre-dst local tz 1",
+                            "_airbyte_extracted_at": "2024-03-10T01:59:00-08:00",
+                            "_airbyte_data": {
+                              "id1": 1,
+                              "id2": 100,
+                              "string": "Alice00"
+                            }
+                          }
+                          """),
+        Jsons.deserialize("""
+                          {
+                            "_airbyte_raw_id": "pre-dst local tz 2",
+                            "_airbyte_extracted_at": "2024-03-10T01:59:00-08:00",
+                            "_airbyte_data": {
+                              "id1": 2,
+                              "id2": 100,
+                              "string": "Bob00"
+                            }
+                          }
+                          """)));
+
+    // Gather initial state at the start of our first new sync
+    DestinationInitialStatus<SnowflakeState> initialState =
+        this.destinationHandler.gatherInitialState(List.of(this.incrementalDedupStream)).getFirst();
+    this.insertRawTableRecords(this.streamId, List.of(
+        // update the records
+        Jsons.deserialize("""
+                          {
+                            "_airbyte_raw_id": "pre-dst utc 1",
+                            "_airbyte_extracted_at": "2024-03-10T02:00:00Z",
+                            "_airbyte_data": {
+                              "id1": 1,
+                              "id2": 100,
+                              "string": "Alice01"
+                            }
+                          }
+                          """),
+        Jsons.deserialize("""
+                          {
+                            "_airbyte_raw_id": "pre-dst utc 2",
+                            "_airbyte_extracted_at": "2024-03-10T02:00:00Z",
+                            "_airbyte_data": {
+                              "id1": 2,
+                              "id2": 100,
+                              "string": "Bob01"
+                            }
+                          }
+                          """)));
+
+    TypeAndDedupeTransaction.executeTypeAndDedupe(this.generator, this.destinationHandler, this.incrementalDedupStream,
+        initialState.initialRawTableStatus().maxProcessedTimestamp(), "");
+
+    DIFFER.diffFinalTableRecords(
+        List.of(
+            Jsons.deserialize("""
+                              {
+                                "_AIRBYTE_RAW_ID": "pre-dst utc 1",
+                                "_AIRBYTE_EXTRACTED_AT": "2024-03-10T02:00:00.000000000Z",
+                                "_AIRBYTE_META": {"errors": []},
+                                "ID1": 1,
+                                "ID2": 100,
+                                "STRING": "Alice01"
+                              }
+                              """),
+            Jsons.deserialize("""
+                              {
+                                "_AIRBYTE_RAW_ID": "pre-dst utc 2",
+                                "_AIRBYTE_EXTRACTED_AT": "2024-03-10T02:00:00.000000000Z",
+                                "_AIRBYTE_META": {"errors": []},
+                                "ID1": 2,
+                                "ID2": 100,
+                                "STRING": "Bob01"
+                              }
+                              """)),
+        this.dumpFinalTableRecords(this.streamId, ""));
+
+    // Gather initial state at the start of our second new sync
+    DestinationInitialStatus<SnowflakeState> initialState2 =
+        this.destinationHandler.gatherInitialState(List.of(this.incrementalDedupStream)).getFirst();
+    this.insertRawTableRecords(this.streamId, List.of(
+        // update the records again
+        Jsons.deserialize("""
+                          {
+                            "_airbyte_raw_id": "post-dst utc 1",
+                            "_airbyte_extracted_at": "2024-03-10T02:01:00Z",
+                            "_airbyte_data": {
+                              "id1": 1,
+                              "id2": 100,
+                              "string": "Alice02"
+                            }
+                          }
+                          """),
+        Jsons.deserialize("""
+                          {
+                            "_airbyte_raw_id": "post-dst utc 2",
+                            "_airbyte_extracted_at": "2024-03-10T02:01:00Z",
+                            "_airbyte_data": {
+                              "id1": 2,
+                              "id2": 100,
+                              "string": "Bob02"
+                            }
+                          }
+                          """)));
+
+    TypeAndDedupeTransaction.executeTypeAndDedupe(this.generator, this.destinationHandler, this.incrementalDedupStream,
+        initialState2.initialRawTableStatus().maxProcessedTimestamp(), "");
+
+    DIFFER.diffFinalTableRecords(
+        List.of(
+            Jsons.deserialize("""
+                              {
+                                "_AIRBYTE_RAW_ID": "post-dst utc 1",
+                                "_AIRBYTE_EXTRACTED_AT": "2024-03-10T02:01:00.000000000Z",
+                                "_AIRBYTE_META": {"errors": []},
+                                "ID1": 1,
+                                "ID2": 100,
+                                "STRING": "Alice02"
+                              }
+                              """),
+            Jsons.deserialize("""
+                              {
+                                "_AIRBYTE_RAW_ID": "post-dst utc 2",
+                                "_AIRBYTE_EXTRACTED_AT": "2024-03-10T02:01:00.000000000Z",
+                                "_AIRBYTE_META": {"errors": []},
+                                "ID1": 2,
+                                "ID2": 100,
+                                "STRING": "Bob02"
+                              }
+                              """)),
+        this.dumpFinalTableRecords(this.streamId, ""));
+  }
+
+  @Test
+  public void dst_test_oldSyncRunsThroughTransition_thenNewSyncRuns_append() throws Exception {
+    this.createRawTable(this.streamId);
+    this.createFinalTable(this.incrementalAppendStream, "");
+    this.insertRawTableRecords(this.streamId, List.of(
+        // 2 records written by a sync running on the old version of snowflake
+        Jsons.deserialize("""
+                          {
+                            "_airbyte_raw_id": "pre-dst local tz 1",
+                            "_airbyte_extracted_at": "2024-03-10T02:00:00-08:00",
+                            "_airbyte_data": {
+                              "id1": 1,
+                              "id2": 100,
+                              "string": "Alice00"
+                            }
+                          }
+                          """),
+        Jsons.deserialize("""
+                          {
+                            "_airbyte_raw_id": "post-dst local tz 2",
+                            "_airbyte_extracted_at": "2024-03-10T02:01:00-07:00",
+                            "_airbyte_data": {
+                              "id1": 2,
+                              "id2": 100,
+                              "string": "Bob00"
+                            }
+                          }
+                          """),
+        // and 2 records that got successfully loaded with local TZ.
+        Jsons.deserialize("""
+                          {
+                            "_airbyte_raw_id": "pre-dst local tz 3",
+                            "_airbyte_extracted_at": "2024-03-10T02:00:00-08:00",
+                            "_airbyte_loaded_at": "1970-01-01T00:00:00Z",
+                            "_airbyte_data": {
+                              "id1": 3,
+                              "id2": 100,
+                              "string": "Charlie00"
+                            }
+                          }
+                          """),
+        Jsons.deserialize("""
+                          {
+                            "_airbyte_raw_id": "post-dst local tz 4",
+                            "_airbyte_extracted_at": "2024-03-10T02:01:00-07:00",
+                            "_airbyte_loaded_at": "1970-01-01T00:00:00Z",
+                            "_airbyte_data": {
+                              "id1": 4,
+                              "id2": 100,
+                              "string": "Dave00"
+                            }
+                          }
+                          """)));
+    this.insertFinalTableRecords(false, this.streamId, "", List.of(
+        Jsons.deserialize("""
+                          {
+                            "_airbyte_raw_id": "pre-dst local tz 3",
+                            "_airbyte_extracted_at": "2024-03-10T02:00:00-08:00",
+                            "_airbyte_meta": {"errors": []},
+                            "id1": 3,
+                            "id2": 100,
+                            "string": "Charlie00"
+                          }
+                          """),
+        Jsons.deserialize("""
+                          {
+                            "_airbyte_raw_id": "post-dst local tz 4",
+                            "_airbyte_extracted_at": "2024-03-10T02:01:00-07:00",
+                            "_airbyte_meta": {"errors": []},
+                            "id1": 4,
+                            "id2": 100,
+                            "string": "Dave00"
+                          }
+                          """)));
+    // Gather initial state at the start of our updated sync
+    DestinationInitialStatus<SnowflakeState> initialState =
+        this.destinationHandler.gatherInitialState(List.of(this.incrementalAppendStream)).getFirst();
+    this.insertRawTableRecords(this.streamId, List.of(
+        // insert raw records with updates
+        Jsons.deserialize("""
+                          {
+                            "_airbyte_raw_id": "post-dst utc 1",
+                            "_airbyte_extracted_at": "2024-03-10T02:02:00Z",
+                            "_airbyte_data": {
+                              "id1": 1,
+                              "id2": 100,
+                              "string": "Alice01"
+                            }
+                          }
+                          """),
+        Jsons.deserialize("""
+                          {
+                            "_airbyte_raw_id": "post-dst utc 2",
+                            "_airbyte_extracted_at": "2024-03-10T02:02:00Z",
+                            "_airbyte_data": {
+                              "id1": 2,
+                              "id2": 100,
+                              "string": "Bob01"
+                            }
+                          }
+                          """),
+        Jsons.deserialize("""
+                          {
+                            "_airbyte_raw_id": "post-dst utc 3",
+                            "_airbyte_extracted_at": "2024-03-10T02:02:00Z",
+                            "_airbyte_data": {
+                              "id1": 3,
+                              "id2": 100,
+                              "string": "Charlie01"
+                            }
+                          }
+                          """),
+        Jsons.deserialize("""
+                          {
+                            "_airbyte_raw_id": "post-dst utc 4",
+                            "_airbyte_extracted_at": "2024-03-10T02:02:00Z",
+                            "_airbyte_data": {
+                              "id1": 4,
+                              "id2": 100,
+                              "string": "Dave01"
+                            }
+                          }
+                          """)));
+
+    TypeAndDedupeTransaction.executeTypeAndDedupe(this.generator, this.destinationHandler, this.incrementalAppendStream,
+        initialState.initialRawTableStatus().maxProcessedTimestamp(), "");
+
+    DIFFER.diffFinalTableRecords(
+        List.of(
+            Jsons.deserialize("""
+                              {
+                                "_AIRBYTE_RAW_ID": "pre-dst local tz 1",
+                                "_AIRBYTE_EXTRACTED_AT": "2024-03-10T02:00:00.000000000Z",
+                                "_AIRBYTE_META": {"errors": []},
+                                "ID1": 1,
+                                "ID2": 100,
+                                "STRING": "Alice00"
+                              }
+                              """),
+            Jsons.deserialize("""
+                              {
+                                "_AIRBYTE_RAW_ID": "post-dst utc 1",
+                                "_AIRBYTE_EXTRACTED_AT": "2024-03-10T02:02:00.000000000Z",
+                                "_AIRBYTE_META": {"errors": []},
+                                "ID1": 1,
+                                "ID2": 100,
+                                "STRING": "Alice01"
+                              }
+                              """),
+            Jsons.deserialize("""
+                              {
+                                "_AIRBYTE_RAW_ID": "post-dst local tz 2",
+                                "_AIRBYTE_EXTRACTED_AT": "2024-03-10T02:01:00.000000000Z",
+                                "_AIRBYTE_META": {
+                                  "errors": []
+                                },
+                                "ID1": 2,
+                                "ID2": 100,
+                                "STRING": "Bob00"
+                              }"""),
+            Jsons.deserialize("""
+                              {
+                                "_AIRBYTE_RAW_ID": "post-dst utc 2",
+                                "_AIRBYTE_EXTRACTED_AT": "2024-03-10T02:02:00.000000000Z",
+                                "_AIRBYTE_META": {"errors": []},
+                                "ID1": 2,
+                                "ID2": 100,
+                                "STRING": "Bob01"
+                              }
+                              """),
+            // note local TZ here. This record was loaded by an older version of the connector.
+            Jsons.deserialize("""
+                              {
+                                "_AIRBYTE_RAW_ID": "pre-dst local tz 3",
+                                "_AIRBYTE_EXTRACTED_AT": "2024-03-10T02:00:00.000000000-08:00",
+                                "_AIRBYTE_META": {
+                                  "errors": []
+                                },
+                                "ID1": 3,
+                                "ID2": 100,
+                                "STRING": "Charlie00"
+                              }"""),
+            Jsons.deserialize("""
+                              {
+                                "_AIRBYTE_RAW_ID": "post-dst utc 3",
+                                "_AIRBYTE_EXTRACTED_AT": "2024-03-10T02:02:00.000000000Z",
+                                "_AIRBYTE_META": {"errors": []},
+                                "ID1": 3,
+                                "ID2": 100,
+                                "STRING": "Charlie01"
+                              }
+                              """),
+            // note local TZ here. This record was loaded by an older version of the connector.
+            Jsons.deserialize("""
+                              {
+                                "_AIRBYTE_RAW_ID": "post-dst local tz 4",
+                                "_AIRBYTE_EXTRACTED_AT": "2024-03-10T02:01:00.000000000-07:00",
+                                "_AIRBYTE_META": {
+                                  "errors": []
+                                },
+                                "ID1": 4,
+                                "ID2": 100,
+                                "STRING": "Dave00"
+                              }"""),
+            Jsons.deserialize("""
+                              {
+                                "_AIRBYTE_RAW_ID": "post-dst utc 4",
+                                "_AIRBYTE_EXTRACTED_AT": "2024-03-10T02:02:00.000000000Z",
+                                "_AIRBYTE_META": {"errors": []},
+                                "ID1": 4,
+                                "ID2": 100,
+                                "STRING": "Dave01"
+                              }
+                              """)),
+        this.dumpFinalTableRecords(this.streamId, ""));
+  }
+
+  @Test
+  public void dst_test_oldSyncRunsBeforeTransition_thenNewSyncRunsThroughTransition_append() throws Exception {
+    this.createRawTable(this.streamId);
+    this.createFinalTable(this.incrementalAppendStream, "");
+    this.insertRawTableRecords(this.streamId, List.of(
+        // record written by a sync running on the old version of snowflake
+        Jsons.deserialize("""
+                          {
+                            "_airbyte_raw_id": "pre-dst local tz 1",
+                            "_airbyte_extracted_at": "2024-03-10T01:59:00-08:00",
+                            "_airbyte_data": {
+                              "id1": 1,
+                              "id2": 100,
+                              "string": "Alice00"
+                            }
+                          }
+                          """)));
+    // Gather initial state at the start of our updated sync
+    DestinationInitialStatus<SnowflakeState> initialState =
+        this.destinationHandler.gatherInitialState(List.of(this.incrementalAppendStream)).getFirst();
+    this.insertRawTableRecords(this.streamId, List.of(
+        // update the record twice
+        // this never really happens, but verify that it works
+        Jsons.deserialize("""
+                          {
+                            "_airbyte_raw_id": "pre-dst utc 1",
+                            "_airbyte_extracted_at": "2024-03-10T02:00:00Z",
+                            "_airbyte_data": {
+                              "id1": 1,
+                              "id2": 100,
+                              "string": "Alice01"
+                            }
+                          }
+                          """),
+        Jsons.deserialize("""
+                          {
+                            "_airbyte_raw_id": "post-dst utc 1",
+                            "_airbyte_extracted_at": "2024-03-10T02:01:00Z",
+                            "_airbyte_data": {
+                              "id1": 1,
+                              "id2": 100,
+                              "string": "Alice02"
+                            }
+                          }
+                          """)));
+
+    TypeAndDedupeTransaction.executeTypeAndDedupe(this.generator, this.destinationHandler, this.incrementalAppendStream,
+        initialState.initialRawTableStatus().maxProcessedTimestamp(), "");
+
+    DIFFER.diffFinalTableRecords(
+        List.of(
+            Jsons.deserialize("""
+                              {
+                                "_AIRBYTE_RAW_ID": "pre-dst local tz 1",
+                                "_AIRBYTE_EXTRACTED_AT": "2024-03-10T01:59:00.000000000Z",
+                                "_AIRBYTE_META": {
+                                  "errors": []
+                                },
+                                "ID1": 1,
+                                "ID2": 100,
+                                "STRING": "Alice00"
+                              }"""),
+            Jsons.deserialize("""
+                              {
+                                "_AIRBYTE_RAW_ID": "pre-dst utc 1",
+                                "_AIRBYTE_EXTRACTED_AT": "2024-03-10T02:00:00.000000000Z",
+                                "_AIRBYTE_META": {
+                                  "errors": []
+                                },
+                                "ID1": 1,
+                                "ID2": 100,
+                                "STRING": "Alice01"
+                              }"""),
+            Jsons.deserialize("""
+                              {
+                                "_AIRBYTE_RAW_ID": "post-dst utc 1",
+                                "_AIRBYTE_EXTRACTED_AT": "2024-03-10T02:01:00.000000000Z",
+                                "_AIRBYTE_META": {"errors": []},
+                                "ID1": 1,
+                                "ID2": 100,
+                                "STRING": "Alice02"
+                              }
+                              """)),
+        this.dumpFinalTableRecords(this.streamId, ""));
+  }
+
+  @Test
+  public void dst_test_oldSyncRunsBeforeTransition_thenNewSyncRunsBeforeTransition_thenNewSyncRunsThroughTransition_append() throws Exception {
+    this.createRawTable(this.streamId);
+    this.createFinalTable(this.incrementalAppendStream, "");
+    this.insertRawTableRecords(this.streamId, List.of(
+        // records written by a sync running on the old version of snowflake
+        Jsons.deserialize("""
+                          {
+                            "_airbyte_raw_id": "pre-dst local tz 1",
+                            "_airbyte_extracted_at": "2024-03-10T01:59:00-08:00",
+                            "_airbyte_data": {
+                              "id1": 1,
+                              "id2": 100,
+                              "string": "Alice00"
+                            }
+                          }
+                          """),
+        Jsons.deserialize("""
+                          {
+                            "_airbyte_raw_id": "pre-dst local tz 2",
+                            "_airbyte_extracted_at": "2024-03-10T01:59:00-08:00",
+                            "_airbyte_data": {
+                              "id1": 2,
+                              "id2": 100,
+                              "string": "Bob00"
+                            }
+                          }
+                          """)));
+
+    // Gather initial state at the start of our first new sync
+    DestinationInitialStatus<SnowflakeState> initialState =
+        this.destinationHandler.gatherInitialState(List.of(this.incrementalAppendStream)).getFirst();
+    this.insertRawTableRecords(this.streamId, List.of(
+        // update the records
+        Jsons.deserialize("""
+                          {
+                            "_airbyte_raw_id": "pre-dst utc 1",
+                            "_airbyte_extracted_at": "2024-03-10T02:00:00Z",
+                            "_airbyte_data": {
+                              "id1": 1,
+                              "id2": 100,
+                              "string": "Alice01"
+                            }
+                          }
+                          """),
+        Jsons.deserialize("""
+                          {
+                            "_airbyte_raw_id": "pre-dst utc 2",
+                            "_airbyte_extracted_at": "2024-03-10T02:00:00Z",
+                            "_airbyte_data": {
+                              "id1": 2,
+                              "id2": 100,
+                              "string": "Bob01"
+                            }
+                          }
+                          """)));
+
+    TypeAndDedupeTransaction.executeTypeAndDedupe(this.generator, this.destinationHandler, this.incrementalAppendStream,
+        initialState.initialRawTableStatus().maxProcessedTimestamp(), "");
+
+    DIFFER.diffFinalTableRecords(
+        List.of(
+            Jsons.deserialize("""
+                              {
+                                "_AIRBYTE_RAW_ID": "pre-dst local tz 1",
+                                "_AIRBYTE_EXTRACTED_AT": "2024-03-10T01:59:00.000000000Z",
+                                "_AIRBYTE_META": {
+                                  "errors": []
+                                },
+                                "ID1": 1,
+                                "ID2": 100,
+                                "STRING": "Alice00"
+                              }"""),
+            Jsons.deserialize("""
+                              {
+                                "_AIRBYTE_RAW_ID": "pre-dst utc 1",
+                                "_AIRBYTE_EXTRACTED_AT": "2024-03-10T02:00:00.000000000Z",
+                                "_AIRBYTE_META": {"errors": []},
+                                "ID1": 1,
+                                "ID2": 100,
+                                "STRING": "Alice01"
+                              }
+                              """),
+            Jsons.deserialize("""
+                              {
+                                "_AIRBYTE_RAW_ID": "pre-dst local tz 2",
+                                "_AIRBYTE_EXTRACTED_AT": "2024-03-10T01:59:00.000000000Z",
+                                "_AIRBYTE_META": {
+                                  "errors": []
+                                },
+                                "ID1": 2,
+                                "ID2": 100,
+                                "STRING": "Bob00"
+                              }"""),
+            Jsons.deserialize("""
+                              {
+                                "_AIRBYTE_RAW_ID": "pre-dst utc 2",
+                                "_AIRBYTE_EXTRACTED_AT": "2024-03-10T02:00:00.000000000Z",
+                                "_AIRBYTE_META": {"errors": []},
+                                "ID1": 2,
+                                "ID2": 100,
+                                "STRING": "Bob01"
+                              }
+                              """)),
+        this.dumpFinalTableRecords(this.streamId, ""));
+
+    // Gather initial state at the start of our second new sync
+    DestinationInitialStatus<SnowflakeState> initialState2 =
+        this.destinationHandler.gatherInitialState(List.of(this.incrementalAppendStream)).getFirst();
+    this.insertRawTableRecords(this.streamId, List.of(
+        // update the records again
+        Jsons.deserialize("""
+                          {
+                            "_airbyte_raw_id": "post-dst utc 1",
+                            "_airbyte_extracted_at": "2024-03-10T02:01:00Z",
+                            "_airbyte_data": {
+                              "id1": 1,
+                              "id2": 100,
+                              "string": "Alice02"
+                            }
+                          }
+                          """),
+        Jsons.deserialize("""
+                          {
+                            "_airbyte_raw_id": "post-dst utc 2",
+                            "_airbyte_extracted_at": "2024-03-10T02:01:00Z",
+                            "_airbyte_data": {
+                              "id1": 2,
+                              "id2": 100,
+                              "string": "Bob02"
+                            }
+                          }
+                          """)));
+
+    TypeAndDedupeTransaction.executeTypeAndDedupe(this.generator, this.destinationHandler, this.incrementalAppendStream,
+        initialState2.initialRawTableStatus().maxProcessedTimestamp(), "");
+
+    DIFFER.diffFinalTableRecords(
+        List.of(
+            Jsons.deserialize("""
+                              {
+                                "_AIRBYTE_RAW_ID": "pre-dst local tz 1",
+                                "_AIRBYTE_EXTRACTED_AT": "2024-03-10T01:59:00.000000000Z",
+                                "_AIRBYTE_META": {
+                                  "errors": []
+                                },
+                                "ID1": 1,
+                                "ID2": 100,
+                                "STRING": "Alice00"
+                              }"""),
+            Jsons.deserialize("""
+                              {
+                                "_AIRBYTE_RAW_ID": "pre-dst utc 1",
+                                "_AIRBYTE_EXTRACTED_AT": "2024-03-10T02:00:00.000000000Z",
+                                "_AIRBYTE_META": {
+                                  "errors": []
+                                },
+                                "ID1": 1,
+                                "ID2": 100,
+                                "STRING": "Alice01"
+                              }"""),
+            Jsons.deserialize("""
+                              {
+                                "_AIRBYTE_RAW_ID": "post-dst utc 1",
+                                "_AIRBYTE_EXTRACTED_AT": "2024-03-10T02:01:00.000000000Z",
+                                "_AIRBYTE_META": {"errors": []},
+                                "ID1": 1,
+                                "ID2": 100,
+                                "STRING": "Alice02"
+                              }
+                              """),
+            Jsons.deserialize("""
+                              {
+                                "_AIRBYTE_RAW_ID": "pre-dst local tz 2",
+                                "_AIRBYTE_EXTRACTED_AT": "2024-03-10T01:59:00.000000000Z",
+                                "_AIRBYTE_META": {
+                                  "errors": []
+                                },
+                                "ID1": 2,
+                                "ID2": 100,
+                                "STRING": "Bob00"
+                              }"""),
+            Jsons.deserialize("""
+                              {
+                                "_AIRBYTE_RAW_ID": "pre-dst utc 2",
+                                "_AIRBYTE_EXTRACTED_AT": "2024-03-10T02:00:00.000000000Z",
+                                "_AIRBYTE_META": {
+                                  "errors": []
+                                },
+                                "ID1": 2,
+                                "ID2": 100,
+                                "STRING": "Bob01"
+                              }"""),
+            Jsons.deserialize("""
+                              {
+                                "_AIRBYTE_RAW_ID": "post-dst utc 2",
+                                "_AIRBYTE_EXTRACTED_AT": "2024-03-10T02:01:00.000000000Z",
+                                "_AIRBYTE_META": {"errors": []},
+                                "ID1": 2,
+                                "ID2": 100,
+                                "STRING": "Bob02"
+                              }
+                              """)),
+        this.dumpFinalTableRecords(this.streamId, ""));
   }
 
 }
